--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/luxon@1.27.0"></script>
   <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-luxon@1.0.0"></script>
@@ -11,11 +12,19 @@
   <title>Document</title>
 </head>
 <body>
-  <div>
-    <canvas id="myChart1"></canvas>
-    <canvas id="myChart2"></canvas>
-    <canvas id="myChart3"></canvas>
-  </div>  
+  <h1 style="border-bottom: 1px solid; font-size:40px; font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif; text-align: center;">Biểu đồ sức khỏe bệnh nhân</h1>
+  <div class="container">
+    <div class="data-table">
+      <canvas id="realtime-chart-one"></canvas>
+      <canvas id="realtime-chart-two"></canvas>
+      <canvas id="realtime-chart-three"></canvas>
+    </div>  
+    <div class="data-table">
+      <canvas id="normal-chart-one"></canvas>
+      <canvas id="normal-chart-two"></canvas>
+      <canvas id="normal-chart-three"></canvas>
+    </div>
+  </div>
   <script src="./index.js"></script>
 </body>
 </html>
